// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageVideoCarousel
    block={
        Object {
            "fields": Object {
              "contents": Array [
                Object {
                  "fields": Object {
                    "description": "foo",
                    "file": Object {
                      "url": "foo",
                    },
                    "title": "foo",
                  },
                  "sys": Object {
                    "id": "foo",
                  },
                },
              ],
              "drip": false,
              "title": "foo",
            },
          }
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="flex flex-column justify-center items-center my4"
>
        <h2
                className="block-headline"
        >
                foo
        </h2>
        <Carousel
                arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                className="col-12 md-col-8 mx-auto mt3"
                dotColor=""
                index={0}
                onChange={[Function]}
                showArrows={true}
                showDots={true}
                showDotsOnImage={true}
                showOnImage={false}
                sliderClasses=""
        >
                <div
                        className="col-12 md-col-11 mx-auto py-auto"
                >
                        <Image
                                alt="foo image 1"
                                bg={false}
                                className="w100"
                                onImgLoad={[Function]}
                                src="foo?w=1200&fm=jpg&fl=progressive&q=90"
                                style={Object {}}
                        />
                </div>
        </Carousel>
</div>,
      "className": "px3 py4 bg-white",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="block-headline"
>
            foo
</h2>,
          <Carousel
            arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
            arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
            className="col-12 md-col-8 mx-auto mt3"
            dotColor=""
            index={0}
            onChange={[Function]}
            showArrows={true}
            showDots={true}
            showDotsOnImage={true}
            showOnImage={false}
            sliderClasses=""
>
            <div
                        className="col-12 md-col-11 mx-auto py-auto"
            >
                        <Image
                                    alt="foo image 1"
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="foo?w=1200&fm=jpg&fl=progressive&q=90"
                                    style={Object {}}
                        />
            </div>
</Carousel>,
        ],
        "className": "flex flex-column justify-center items-center my4",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "foo",
            "className": "block-headline",
          },
          "ref": null,
          "rendered": "foo",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
            "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
            "children": Array [
              <div
                className="col-12 md-col-11 mx-auto py-auto"
>
                <Image
                                alt="foo image 1"
                                bg={false}
                                className="w100"
                                onImgLoad={[Function]}
                                src="foo?w=1200&fm=jpg&fl=progressive&q=90"
                                style={Object {}}
                />
</div>,
            ],
            "className": "col-12 md-col-8 mx-auto mt3",
            "dotColor": "",
            "index": 0,
            "onChange": [Function],
            "showArrows": true,
            "showDots": true,
            "showDotsOnImage": true,
            "showOnImage": false,
            "sliderClasses": "",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "foo",
              "nodeType": "host",
              "props": Object {
                "children": <Image
                  alt="foo image 1"
                  bg={false}
                  className="w100"
                  onImgLoad={[Function]}
                  src="foo?w=1200&fm=jpg&fl=progressive&q=90"
                  style={Object {}}
/>,
                "className": "col-12 md-col-11 mx-auto py-auto",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "foo image 1",
                  "bg": false,
                  "children": null,
                  "className": "w100",
                  "onImgLoad": [Function],
                  "src": "foo?w=1200&fm=jpg&fl=progressive&q=90",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="flex flex-column justify-center items-center my4"
>
          <h2
                    className="block-headline"
          >
                    foo
          </h2>
          <Carousel
                    arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                    arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                    className="col-12 md-col-8 mx-auto mt3"
                    dotColor=""
                    index={0}
                    onChange={[Function]}
                    showArrows={true}
                    showDots={true}
                    showDotsOnImage={true}
                    showOnImage={false}
                    sliderClasses=""
          >
                    <div
                              className="col-12 md-col-11 mx-auto py-auto"
                    >
                              <Image
                                        alt="foo image 1"
                                        bg={false}
                                        className="w100"
                                        onImgLoad={[Function]}
                                        src="foo?w=1200&fm=jpg&fl=progressive&q=90"
                                        style={Object {}}
                              />
                    </div>
          </Carousel>
</div>,
        "className": "px3 py4 bg-white",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="block-headline"
>
              foo
</h2>,
            <Carousel
              arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
              arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
              className="col-12 md-col-8 mx-auto mt3"
              dotColor=""
              index={0}
              onChange={[Function]}
              showArrows={true}
              showDots={true}
              showDotsOnImage={true}
              showOnImage={false}
              sliderClasses=""
>
              <div
                            className="col-12 md-col-11 mx-auto py-auto"
              >
                            <Image
                                          alt="foo image 1"
                                          bg={false}
                                          className="w100"
                                          onImgLoad={[Function]}
                                          src="foo?w=1200&fm=jpg&fl=progressive&q=90"
                                          style={Object {}}
                            />
              </div>
</Carousel>,
          ],
          "className": "flex flex-column justify-center items-center my4",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "foo",
              "className": "block-headline",
            },
            "ref": null,
            "rendered": "foo",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
              "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
              "children": Array [
                <div
                  className="col-12 md-col-11 mx-auto py-auto"
>
                  <Image
                                    alt="foo image 1"
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="foo?w=1200&fm=jpg&fl=progressive&q=90"
                                    style={Object {}}
                  />
</div>,
              ],
              "className": "col-12 md-col-8 mx-auto mt3",
              "dotColor": "",
              "index": 0,
              "onChange": [Function],
              "showArrows": true,
              "showDots": true,
              "showDotsOnImage": true,
              "showOnImage": false,
              "sliderClasses": "",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "foo",
                "nodeType": "host",
                "props": Object {
                  "children": <Image
                    alt="foo image 1"
                    bg={false}
                    className="w100"
                    onImgLoad={[Function]}
                    src="foo?w=1200&fm=jpg&fl=progressive&q=90"
                    style={Object {}}
/>,
                  "className": "col-12 md-col-11 mx-auto py-auto",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "foo image 1",
                    "bg": false,
                    "children": null,
                    "className": "w100",
                    "onImgLoad": [Function],
                    "src": "foo?w=1200&fm=jpg&fl=progressive&q=90",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
            ],
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageVideoCarousel
    block={
        Object {
            "fields": Object {
              "contents": Array [],
              "drip": false,
              "title": "",
            },
          }
    }
    setRef={[Function]}
    z={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="flex flex-column justify-center items-center my4"
>
        <h2
                className="block-headline"
        />
        <Carousel
                arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                className="col-12 md-col-8 mx-auto mt3"
                dotColor=""
                index={0}
                onChange={[Function]}
                showArrows={true}
                showDots={true}
                showDotsOnImage={true}
                showOnImage={false}
                sliderClasses=""
        >
                
        </Carousel>
</div>,
      "className": "px3 py4 bg-white",
      "style": Object {
        "zIndex": 1,
      },
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="block-headline"
/>,
          <Carousel
            arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
            arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
            className="col-12 md-col-8 mx-auto mt3"
            dotColor=""
            index={0}
            onChange={[Function]}
            showArrows={true}
            showDots={true}
            showDotsOnImage={true}
            showOnImage={false}
            sliderClasses=""
>
            
</Carousel>,
        ],
        "className": "flex flex-column justify-center items-center my4",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "block-headline",
          },
          "ref": null,
          "rendered": "",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
            "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
            "children": Array [],
            "className": "col-12 md-col-8 mx-auto mt3",
            "dotColor": "",
            "index": 0,
            "onChange": [Function],
            "showArrows": true,
            "showDots": true,
            "showDotsOnImage": true,
            "showOnImage": false,
            "sliderClasses": "",
          },
          "ref": null,
          "rendered": Array [],
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="flex flex-column justify-center items-center my4"
>
          <h2
                    className="block-headline"
          />
          <Carousel
                    arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                    arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                    className="col-12 md-col-8 mx-auto mt3"
                    dotColor=""
                    index={0}
                    onChange={[Function]}
                    showArrows={true}
                    showDots={true}
                    showDotsOnImage={true}
                    showOnImage={false}
                    sliderClasses=""
          >
                    
          </Carousel>
</div>,
        "className": "px3 py4 bg-white",
        "style": Object {
          "zIndex": 1,
        },
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="block-headline"
/>,
            <Carousel
              arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
              arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
              className="col-12 md-col-8 mx-auto mt3"
              dotColor=""
              index={0}
              onChange={[Function]}
              showArrows={true}
              showDots={true}
              showDotsOnImage={true}
              showOnImage={false}
              sliderClasses=""
>
              
</Carousel>,
          ],
          "className": "flex flex-column justify-center items-center my4",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "block-headline",
            },
            "ref": null,
            "rendered": "",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
              "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
              "children": Array [],
              "className": "col-12 md-col-8 mx-auto mt3",
              "dotColor": "",
              "index": 0,
              "onChange": [Function],
              "showArrows": true,
              "showDots": true,
              "showDotsOnImage": true,
              "showOnImage": false,
              "sliderClasses": "",
            },
            "ref": null,
            "rendered": Array [],
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
